--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <div class="wrapper">
 
             {%- include about.html -%} {%- if site.data.projects.size > 0 -%} {%- include projects.html -%} {%- endif -%} {%- if site.data.experience.size > 0 -%} {%- include experience.html -%} {%- endif -%} {%- if site.data.education.size > 0 -%} {%- include education.html
-            -%} {%- if site.data.publication.size > 0 -%} {%- include publication.html %} {%- endif -%} {%- include more.html -%}
+            -%} {%- endif -%} {%- include more.html -%}
 
         </div>
     </main>
